src/tools/runk/vendor/derive_builder/tests/compile-fail/rename_setter_struct_level.stderr
error: Unknown field: `name`
 --> $DIR/rename_setter_struct_level.rs:7:18
  |
7 | #[builder(setter(name = "foo"))]
  |                  ^^^^

error[E0433]: failed to resolve: use of undeclared type or module `LoremBuilder`
  --> $DIR/rename_setter_struct_level.rs:14:13
   |
14 |     let x = LoremBuilder::default()
   |             ^^^^^^^^^^^^ use of undeclared type or module `LoremBuilder`
